RESOLVED FIXED 89004
[chromium] Assert if iterating an invalid RenderSurfaceLayerList, where a layer in the list has no RenderSurface
https://bugs.webkit.org/show_bug.cgi?id=89004
Summary [chromium] Assert if iterating an invalid RenderSurfaceLayerList, where a lay...
Dana Jansens
Reported 2012-06-13 08:45:49 PDT
[chromium] Assert if iterating an invalid RenderSurfaceLayerList, where a layer in the list has no RenderSurface
Attachments
Patch (7.52 KB, patch)
2012-06-13 08:50 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-06-13 08:50:46 PDT
Dana Jansens
Comment 2 2012-06-13 08:52:55 PDT
I had removed the unit test for an invalid RSLL (layers with no surface in the list), but maybe we want to keep the test in release mode to demonstrate it doesn't crash on invalid input? (From discussion on bug #88886)
Adrienne Walker
Comment 3 2012-06-13 17:42:02 PDT
Comment on attachment 147329 [details] Patch R=me. Seems like a reasonable way to handle that error.
WebKit Review Bot
Comment 4 2012-06-13 19:27:37 PDT
Comment on attachment 147329 [details] Patch Clearing flags on attachment: 147329 Committed r120266: <http://trac.webkit.org/changeset/120266>
WebKit Review Bot
Comment 5 2012-06-13 19:27:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.