Source/WebCore/platform/graphics/chromium/cc/CCLayerIterator.h
@@ -145,7 +145,15 @@ private:
         : m_renderSurfaceLayerList(renderSurfaceLayerList)
         , m_targetRenderSurfaceLayerIndex(0)
     {
-        if (start && !renderSurfaceLayerList->isEmpty() && targetRenderSurface())
+        for (size_t i = 0; i < renderSurfaceLayerList->size(); ++i) {
+            if (!(*renderSurfaceLayerList)[i]->renderSurface()) {
+                ASSERT_NOT_REACHED();
+                m_actions.end(*this);
+                return;
+            }
+        }
+
+        if (start && !renderSurfaceLayerList->isEmpty())
             m_actions.begin(*this);
         else
             m_actions.end(*this);
